--- a/health-checker/Dockerfile
+++ b/health-checker/Dockerfile
@@ -1,7 +1,9 @@
 FROM golang:1.16.4-alpine3.13 AS build-env
 
+ARG DIR
+
 WORKDIR /go/src/app
-COPY . .
+COPY $DIR .
 
 RUN go build main.go
 
@@ -10,6 +12,7 @@ FROM alpine:3.13
 
 WORKDIR /app
 COPY --from=build-env /go/src/app/main /app/
+
 
 RUN apk update && apk add curl
 
