--- a/local.env
+++ b/local.env
@@ -1,2 +1,7 @@
 MICRO_A_HOST=localhost
 MICRO_A_PORT=8081
+MICRO_A_HOST="micro-a"
+MICRO_B_HOST="micro-b"
+HEALTH_CHECKER_PORT="8080"
+MICRO_A_PORT="8081"
+MICRO_B_PORT="8082"
