--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -7,9 +7,7 @@ on:
 
 jobs:
   build:
-    # Job name is Greeting
     name: Build and deploy
-    # This job runs on Linux
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/setup-python@v2
@@ -39,15 +37,11 @@ jobs:
         env:
           SUBDOMAIN: "${{ steps.get_subdomain.outputs.hash }}."
     env:
-      ENV: "DEV"
-      IS_CICD_ENV: "true"
-      COMPOSER_PAT: ${{ secrets.COMPOSER_PAT }}
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_PASS: ${{ secrets.DOCKERHUB_PASS }}
-      KUBECTL_CONFIG_BASE64: ${{ secrets.KUBECTL_CONFIG_BASE64_STAGING }}
-      WS_SECRET: ${{ secrets.SECRET_BASE64_DEV }}
+      KUBECTL_CONFIG_BASE64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
+      HELM_SECRET_BASE64: ${{ secrets.SECRET_BASE64_DEV }}
       DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
       DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
-      SECRET_FILE: "/home/runner/webshrinker/secret.yml"
-      DOMAIN: "dnsfilter.me"
-      USE_SUBDOMAIN: true
+      SECRET_FILE: "/home/runner/secret.yml"
+      DOMAIN: "test.com"
