--- a/.github/actions/install-deps/action.yml
+++ b/.github/actions/install-deps/action.yml
@@ -3,13 +3,16 @@ description: 'Installs docker, kubectl, npm, newman'
 runs:
   using: "composite"
   steps:
-    #- name: "Fix GPG repo"
-    #  shell: bash
-    #  run: sudo add-apt-repository ppa:webupd8team/y-ppa-manager && sudo apt-get --allow-releaseinfo-change update -y && sudo apt-get install y-ppa-manager -y
+    - name: "Fix GPG repo"
+      shell: bash
+      run: sudo add-apt-repository ppa:webupd8team/y-ppa-manager && sudo apt-get --allow-releaseinfo-change update -y && sudo apt-get install y-ppa-manager -y
     - name: "Add kubectl repo"
       shell: bash
       run: sudo apt-get update && sudo apt-get install -y apt-transport-https gnupg2 &&
         curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+    - name: "test"
+      shell: bash
+      run: echo "here123"
     - name: "Install docker GPG"
       shell: bash
       run: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
