--- a/.github/actions/install-deps/action.yml
+++ b/.github/actions/install-deps/action.yml
@@ -32,8 +32,8 @@ runs:
       run: echo "here before golang"
     - name: "Install golang"
       shell: bash
-      run: sudo add-apt-repository ppa:longsleep/golang-backports
-        sudo apt update
+      run: sudo add-apt-repository ppa:longsleep/golang-backports &&
+        sudo apt update &&
         sudo apt install golang-go
     - name: "Install ozone."
       shell: bash
