--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -15,6 +15,11 @@ jobs:
           submodules: recursive
       - name: Install deps
         uses: ./.github/actions/install-deps
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.$DOCKERHUB_USERNAME }}
+          password: ${{ secrets.$DOCKERHUB_PASS }}
       - name: Build deploy test
         uses: ./.github/actions/build-and-deploy
       #- name: Run postman e2e tests
