--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ozone2021
-          password: ${{ secrets.DOCKERHUB_PASS }}
+          password: {{ env.DOCKERHUB_PASS }}
       - name: Build deploy test
         uses: ./.github/actions/build-and-deploy
       #- name: Run postman e2e tests
@@ -27,6 +27,7 @@ jobs:
       KUBECTL_CONFIG_BASE64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
       HELM_SECRET_BASE64: ${{ secrets.SECRET_BASE64_DEV }}
       DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+      DOCKERHUB_PASS: ${{ secrets.DOCKERHUB_PASS }}
       DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
       SECRET_FILE: "/home/runner/secret.yml"
       DOMAIN: "test.com"
