--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ozone2021
-          password: {{ env.DOCKERHUB_PASS }}
+          password: ${{ env.DOCKERHUB_PASS }}
       - name: Build deploy test
         uses: ./.github/actions/build-and-deploy
       #- name: Run postman e2e tests
