--- a/.github/actions/build-and-deploy/action.yml
+++ b/.github/actions/build-and-deploy/action.yml
@@ -12,6 +12,9 @@ runs:
     - name: "Setup helm secret."
       shell: bash
       run: echo "$HELM_SECRET_BASE64" | base64 --decode > $SECRET_FILE
+    - name: "Login with docker hub."
+      shell: bash
+      run: echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USER" --password-stdin
     - name: "Ozone - Build deploy test."
       shell: bash
       run: cd $GITHUB_WORKSPACE && ozone r -c ns-k8s -d all-test
