--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "docker-http-https-echo"]
 	path = docker-http-https-echo
 	url = git@github.com:mendhak/docker-http-https-echo.git
+[submodule "micro-x"]
+	path = micro-x
+	url = git@github.com:ozone2021/micro-x.git
+[submodule "health-checker"]
+	path = health-checker
+	url = git@github.com:ozone2021/health-checker.git
+[submodule "micro-a"]
+	path = micro-a
+	url = git@github.com:ozone2021/micro-a.git
