--- a/.github/actions/install-deps/action.yml
+++ b/.github/actions/install-deps/action.yml
@@ -38,6 +38,9 @@ runs:
     - name: "Install ozone."
       shell: bash
       run: go get -u github.com/ozone2021/ozone/ozone
+    - name: "Golang path"
+      shell: bash
+      run: echo "$HOME/golang/bin" >> $GITHUB_PATH
     - name: "Install npm"
       shell: bash
       run: sudo apt install -y nodejs-dev node-gyp libssl1.0-dev npm
