--- a/.github/actions/install-deps/action.yml
+++ b/.github/actions/install-deps/action.yml
@@ -30,20 +30,16 @@ runs:
     - name: "test"
       shell: bash
       run: echo "here before golang"
-    - name: "Install golang"
-      shell: bash
-      run: sudo add-apt-repository ppa:longsleep/golang-backports &&
-        sudo apt update &&
-        sudo apt install golang-go
+    - name: Set up Go 1.14
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.14
     - name: "Install ozone."
       shell: bash
       run: go get -u github.com/ozone2021/ozone/ozone
     - name: "find ozone"
       shell: bash
       run: find . -name ozone
-    - name: "Golang path"
-      shell: bash
-      run: echo "$HOME/golang/bin" >> $GITHUB_PATH
     - name: "Install npm"
       shell: bash
       run: sudo apt install -y nodejs-dev node-gyp libssl1.0-dev npm
