--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           pwd
           echo ${GOPATH}
+          ls ${GOPATH}
           echo ${GOROOT}
       - name: Build deploy test
         uses: ./.github/actions/build-and-deploy
