--- a/.github/workflows/MergeToNamedBranch.yml
+++ b/.github/workflows/MergeToNamedBranch.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - develop
+      - main
 
 jobs:
   build:
@@ -17,7 +18,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-          token: ${{ secrets.GH_PAT }}
       - name: Get urlsafe subdomain from branch name
         id: get_subdomain
         run:
@@ -29,8 +29,7 @@ jobs:
       - name: Build deploy
         uses: ./.github/actions/build-and-deploy
         env:
-          SUBDOMAIN: ${{ steps.get_subdomain.outputs.url_safe }}
-          GITLAB_PAT: ${{ secrets.DOCKERHUB_USERNAME }}
+          GIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
       - name: Run health check
         uses: ./.github/actions/postman-health-test
         env:
