--- a/.github/workflows/MergeToNamedBranch.yml
+++ b/.github/workflows/MergeToNamedBranch.yml
@@ -18,14 +18,17 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: Get urlsafe subdomain from branch name
-        id: get_subdomain
-        run:
-          echo "##[set-output name=url_safe;]$(cd $GITHUB_WORKSPACE && ./projects/script-common/urlSafe.py $GIT_BRANCH)"
-        env:
-          GIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
       - name: Install deps
         uses: ./.github/actions/install-deps
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ env.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PASS }}
+      - name: Set up Go 1.14
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.14
       - name: Build deploy
         uses: ./.github/actions/build-and-deploy
         env:
