--- a/.github/workflows/MergeToNamedBranch.yml
+++ b/.github/workflows/MergeToNamedBranch.yml
@@ -33,14 +33,9 @@ jobs:
         uses: ./.github/actions/build-deploy-static
         env:
           GIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
-      - name: Run health check
-        uses: ./.github/actions/postman-health-test
-        env:
-          SUBDOMAIN: ${{ steps.get_subdomain.outputs.url_safe }}
-      - name: Run postman tests
-        uses: ./.github/actions/postman-e2e-test
-        env:
-          SUBDOMAIN: ${{ steps.get_subdomain.outputs.url_safe }}
+      - name: Test
+        shell: bash
+          run: cd $GITHUB_WORKSPACE && ozone r -c static-ns-k8s -d test-all
     env:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_PASS: ${{ secrets.DOCKERHUB_PASS }}
