--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -28,6 +28,9 @@ jobs:
         uses: ./.github/actions/build-and-deploy
         env:
           GIT_BRANCH: ${{ github.head_ref }}
+      - name: Test
+        shell: bash
+          run: cd $GITHUB_WORKSPACE && ozone r -c static-ns-k8s -d test-all
 
     env:
       KUBECTL_CONFIG_BASE64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
