--- a/.github/actions/postman-health-test/action.yml
+++ b/.github/actions/postman-health-test/action.yml
@@ -2,6 +2,6 @@ name: 'Run postman health tests'
 runs:
   using: "composite"
   steps:
-    - name: "Run postman tests."
+    - name: "Ozone - Build deploy."
       shell: bash
-      run: cd $GITHUB_WORKSPACE && ./script/runPostmanTests.sh $SUBDOMAIN $DOMAIN
+      run: cd $GITHUB_WORKSPACE && ozone r -c $CONTEXT -d all
