--- a/.github/workflows/MergeToNamedBranch.yml
+++ b/.github/workflows/MergeToNamedBranch.yml
@@ -27,20 +27,16 @@ jobs:
       - name: Install deps
         uses: ./.github/actions/install-deps
       - name: Build deploy
-        uses: ./.github/actions/build-and-deploy
+        uses: ./.github/actions/build-deploy
         env:
           GIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
-      - name: Run health check
-        uses: ./.github/actions/postman-health-test
+          CONTEXT: static-ns-k8s
+      - name: Test
+        uses: ./.github/actions/build-deploy
         env:
-          SUBDOMAIN: ${{ steps.get_subdomain.outputs.url_safe }}
-      - name: Run postman tests
-        uses: ./.github/actions/postman-e2e-test
-        env:
-          SUBDOMAIN: ${{ steps.get_subdomain.outputs.url_safe }}
+          GIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
+          CONTEXT: static-ns-k8s
     env:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASS: ${{ secrets.DOCKERHUB_PASS }}
       KUBECTL_CONFIG_BASE64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
       HELM_SECRET_BASE64: ${{ secrets.HELM_SECRET_BASE64 }}
       DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
