--- a/.github/workflows/PullRequestClosed.yml
+++ b/.github/workflows/PullRequestClosed.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ secrets.GH_PAT }} # token not needed for opensource repos
       - name: "Make kube directory"
         shell: bash
         run: mkdir ~/.kube;
