--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -10,6 +10,10 @@ jobs:
     name: Build and deploy
     runs-on: ubuntu-18.04
     steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+          token: ${{ secrets.GH_PAT }} # token not needed for opensource repos
       - name: Extract branch name
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
