--- a/.github/actions/build-deploy/action.yml
+++ b/.github/actions/build-deploy/action.yml
@@ -57,9 +57,7 @@ runs:
       run: cd $GITHUB_WORKSPACE && ozone r -c  -d all
       env:
         K8S_SECRET_BASE64: ${{ inputs.k8s_secret_base64 }}
-        KUBECTL_CONFIG_BASE64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
-        HELM_SECRET_BASE64: ${{ secrets.SECRET_BASE64 }}
-        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-        DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
-        SECRET_FILE: "/home/runner/secret.yml"
-        DOMAIN: "test.com"
+        KUBECTL_CONFIG_BASE64: ${{ inputs.k8s_config_base64 }}
+        DOCKER_REGISTRY: ${{ inputs.docker_registry }}
+        DOCKER_REPO: ${{ inputs.docker_repo }}
+        DOMAIN: ${{ inputs.domain }}
