--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -26,9 +26,8 @@ jobs:
           docker_registry: docker.io
           domain: test.com
           k8s_secret_base64: ${{ secrets.SECRET_BASE64 }}
-        env:
-          GIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
-          CONTEXT: ${{ env.CONTEXT }}
+          git_branch: ${{ steps.extract_branch.outputs.branch }}
+          context: ${{ env.CONTEXT }}
       - name: Test
         uses: ./.github/actions/build-deploy
         env:
