--- a/.github/actions/build-deploy/action.yml
+++ b/.github/actions/build-deploy/action.yml
@@ -31,7 +31,7 @@ runs:
     - name: Install deps
       uses: ./.github/actions/install-deps
     - name: Log in to Docker Hub
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      uses: docker/login-action@v1
       with:
         username: ${{ inputs.docker_user }}
         password: ${{ inputs.docker_pass }}
