--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -18,6 +18,16 @@ jobs:
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ inputs.docker_user }}
+          password: ${{ inputs.docker_pass }}
+          registry: ${{ inputs.docker_registry }}
+          - name: Set up Go 1.14
+            uses: actions/setup-go@v2.1.3
+            with:
+              go-version: 1.14
       - name: Build deploy test
         uses: ./.github/actions/build-deploy
         with:
