--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ozone2021
-          password: ${{ secrets.DOCKER_PASS }}
+          password: ${{ env.DOCKER_PASS }}
       - name: Set up Go 1.14
         uses: actions/setup-go@v2.1.3
         with:
@@ -42,3 +42,4 @@ jobs:
           CONTEXT: ${{ env.CONTEXT }}
     env:
       CONTEXT: dynamic-ns-k8s
+      DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
