--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -34,7 +34,7 @@ jobs:
           domain: test.com
           k8s_secret_base64: ${{ secrets.SECRET_BASE64 }}
           git_branch: ${{ steps.extract_branch.outputs.branch }}
-          context: ${{ env.CONTEXT }}
+          context: $CONTEXT
       - name: Test
         uses: ./.github/actions/build-deploy
         env:
