--- a/.github/workflows/PullRequestClosed.yml
+++ b/.github/workflows/PullRequestClosed.yml
@@ -40,6 +40,12 @@ jobs:
         id: get_subdomain
         run:
           echo "##[set-output name=hash;]$(cd $GITHUB_WORKSPACE && ./projects/script-common/convertBase64URL.sh ${{ github.head_ref }})"
+      - name: Set up Go 1.14
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.14
+      - name: Install deps
+        uses: ./.github/actions/install-deps
       - name: "Teardown namespace."
         run: cd $GITHUB_WORKSPACE && ozone r -c dynamic-ns-k8s -d delete-namespace
         env:
