--- a/.github/actions/install-deps/action.yml
+++ b/.github/actions/install-deps/action.yml
@@ -10,9 +10,6 @@ runs:
       shell: bash
       run: sudo apt-get update && sudo apt-get install -y apt-transport-https gnupg2 &&
         curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-    - name: "test"
-      shell: bash
-      run: echo "here123"
     - name: "Install docker GPG"
       shell: bash
       run: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
@@ -27,21 +24,12 @@ runs:
       run: echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list &&
         sudo apt-get update &&
         sudo apt-get install -y kubectl
-    - name: "test"
-      shell: bash
-      run: echo "here before golang"
     - name: "Install ozone."
       shell: bash
       run: go get -u github.com/ozone2021/ozone/ozone
-    - name: "find ozone"
-      shell: bash
-      run: find . -name ozone
     - name: "Install npm"
       shell: bash
-      run: sudo apt install -y nodejs-dev node-gyp libssl1.0-dev npm
-    - name: "test"
-      shell: bash
-      run: echo "here4"
+      run: sudo apt install -y libnode nodejs-dev node-gyp libssl1.0-dev npm
     - name: "Install newman"
       shell: bash
       run: sudo npm install -g newman
