--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -18,6 +18,9 @@ jobs:
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
+      - name: Branch head_ref
+        shell: bash
+        run: echo ${{ github.head_ref }}
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
