--- a/.github/workflows/PullRequestClosed.yml
+++ b/.github/workflows/PullRequestClosed.yml
@@ -36,10 +36,6 @@ jobs:
       - name: "Setup kubectl config for auth"
         shell: bash
         run: echo $KUBECTL_CONFIG_BASE64 | base64 --decode > ~/.kube/config
-      - name: Get base64 subdomain from branch name
-        id: get_subdomain
-        run:
-          echo "##[set-output name=hash;]$(cd $GITHUB_WORKSPACE && ./projects/script-common/convertBase64URL.sh ${{ github.head_ref }})"
       - name: Set up Go 1.14
         uses: actions/setup-go@v2.1.3
         with:
@@ -49,6 +45,6 @@ jobs:
       - name: "Teardown namespace."
         run: cd $GITHUB_WORKSPACE && ozone r -c dynamic-ns-k8s -d delete-namespace
         env:
-          NAMESPACE: "${{ steps.get_subdomain.outputs.hash }}"
+          GIT_BRANCH: ${{ github.head_ref }}
     env:
       KUBECTL_CONFIG_BASE64: ${{ secrets.KUBECTL_CONFIG_BASE64_STAGING }}
