--- a/.github/workflows/PullRequestOpened.yml
+++ b/.github/workflows/PullRequestOpened.yml
@@ -14,10 +14,10 @@ jobs:
         with:
           submodules: recursive
           # token: ${{ secrets.GH_PAT }} # token not needed for opensource repos.
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
+      #- name: Extract branch name
+      #  shell: bash
+      #  run: echo "##[set-output name=branch;]$(echo $GITHUB_HEAD_REF)"
+      #  id: extract_branch
       - name: Branch head_ref
         shell: bash
         run: echo ${{ github.head_ref }}
@@ -37,12 +37,12 @@ jobs:
           domain: oz0n3.com
           k8s_secret_base64: ${{ secrets.SECRET_BASE64 }}
           k8s_config_base64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
-          git_branch: ${{ steps.extract_branch.outputs.branch }}
+          git_branch: ${{ github.head_ref }}
           context: ${{ env.CONTEXT }}
       - name: Test
         uses: ./.github/actions/postman-health-test
         env:
-          GIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
+          GIT_BRANCH: ${{ github.head_ref }}
           DOMAIN: oz0n3.com
           CONTEXT: ${{ env.CONTEXT }}
     env:
