--- a/.github/workflows/PullRequestClosed.yml
+++ b/.github/workflows/PullRequestClosed.yml
@@ -13,13 +13,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-          # token: ${{ secrets.GH_PAT }} # token not needed for opensource repos
-      - name: "Make kube directory"
-        shell: bash
-        run: mkdir ~/.kube;
-      - name: "Setup kubectl config for auth"
-        shell: bash
-        run: echo $KUBECTL_CONFIG_BASE64 | base64 --decode > ~/.kube/config
+      - name: Set up Go 1.14
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.14
+      - name: Build deploy test
+        uses: ./.github/actions/delete-ns
+        with:
+          k8s_config_base64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
     env:
       KUBECTL_CONFIG_BASE64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
   close_pr_without_merge:
@@ -30,21 +31,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: "Make kube directory"
-        shell: bash
-        run: mkdir ~/.kube;
-      - name: "Setup kubectl config for auth"
-        shell: bash
-        run: echo $KUBECTL_CONFIG_BASE64 | base64 --decode > ~/.kube/config
       - name: Set up Go 1.14
         uses: actions/setup-go@v2.1.3
         with:
           go-version: 1.14
-      - name: Install deps
-        uses: ./.github/actions/install-deps
-      - name: "Teardown namespace."
-        run: cd $GITHUB_WORKSPACE && ozone r -c dynamic-ns-k8s -d delete-namespace
-        env:
-          GIT_BRANCH: ${{ github.head_ref }}
+      - name: Build deploy test
+        uses: ./.github/actions/delete-ns
+        with:
+          k8s_config_base64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
+
     env:
       KUBECTL_CONFIG_BASE64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
