--- a/.github/actions/delete-ns/action.yml
+++ b/.github/actions/delete-ns/action.yml
@@ -1,4 +1,5 @@
-name: 'Run postman health tests'
+name: 'Delete namespace'
+description: 'Deletes namespace, thereby destroying the PR sandbox'
 inputs:
   k8s_config_base64:
     description: 'Base64 encryption of k8s config'
@@ -15,6 +16,7 @@ runs:
     - name: Install deps
       uses: ./.github/actions/install-deps
     - name: "Teardown namespace."
+      shell: bash
       run: cd $GITHUB_WORKSPACE && ozone r -c dynamic-ns-k8s -d delete-namespace
       env:
         GIT_BRANCH: ${{ github.head_ref }}
