--- a/.github/workflows/PullRequestClosed.yml
+++ b/.github/workflows/PullRequestClosed.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-go@v2.1.3
         with:
           go-version: 1.14
-      - name: Build deploy test
+      - name: Delete sandbox
         uses: ./.github/actions/delete-ns
         with:
           k8s_config_base64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
@@ -35,7 +35,7 @@ jobs:
         uses: actions/setup-go@v2.1.3
         with:
           go-version: 1.14
-      - name: Build deploy test
+      - name: Delete sandbox
         uses: ./.github/actions/delete-ns
         with:
           k8s_config_base64: ${{ secrets.KUBECTL_CONFIG_BASE64 }}
