--- a/.github/workflows/MergeToNamedBranch.yml
+++ b/.github/workflows/MergeToNamedBranch.yml
@@ -1,4 +1,4 @@
-name: Merge/Push to a base branch (develop/epics)
+name: Merge/Push to a base branch (develop/epics/main)
 # This workflow is triggered on pushes to the repository.
 on:
   push:
@@ -18,10 +18,10 @@ jobs:
       - name: Install deps
         uses: ./.github/actions/install-deps
       - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v1
         with:
-          username: ${{ env.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_PASS }}
+          username: ${{ env.DOCKER_USER }}
+          password: ${{ env.DOCKER_PASS }}
       - name: Set up Go 1.14
         uses: actions/setup-go@v2.1.3
         with:
