--- a/.github/actions/build-deploy/action.yml
+++ b/.github/actions/build-deploy/action.yml
@@ -16,9 +16,6 @@ inputs:
   domain:
     description: 'Domain'
     required: true
-  git_branch:
-    description: 'Extracted git branch'
-    required: true
   k8s_secret_base64:
     description: 'Base64 encryption of k8s secret'
     required: true
@@ -40,7 +37,7 @@ runs:
       shell: bash
       run: cd $GITHUB_WORKSPACE && ozone r -c ${{ inputs.context }} -d all
       env:
-        GIT_BRANCH: ${{ inputs.git_branch }}
+        GIT_BRANCH: ${{ github.head_ref }}
         SECRET_BASE64: ${{ inputs.k8s_secret_base64 }}
         KUBECTL_CONFIG_BASE64: ${{ inputs.k8s_config_base64 }}
         DOCKER_REGISTRY: ${{ inputs.docker_registry }}
